# ai.zig

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  build.zig  build.zig.zon
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/ai_zig/: __init__.py  _lib.py  _results.py  agent.py  embeddings.py  errors.py  generate.py  media.py  objects.py  providers.py  runtime.py  stream.py  telemetry.py  tools.py
bindings/python/tests/: conftest.py  test_ffi.py  test_live.py  test_v1.py
bindings/rust/: Cargo.toml  README.md
conformance/: SCHEMA.md  normalize.mjs  package-lock.json  package.json  run.mjs  runner-ts.mjs  server.mjs
conformance/scenarios/: 01-generate-text-openai.json  02-generate-text-anthropic.json  03-stream-text-openai.json  04-stream-text-anthropic.json  05-generate-text-tool-openai.json  06-generate-text-tool-anthropic.json  07-stream-text-tool-anthropic.json  08-generate-object-openai.json  09-generate-object-anthropic.json  10-stream-object-openai.json  11-embed-openai.json  12-retry-openai.json  13-error-openai.json  14-error-anthropic.json
conformance/test/: normalize.test.mjs  server.test.mjs
docs/: contracts.md  porting-guide.md  roadmap.md
docs/book/: book.toml
docs/research/: README.md  gap-gateway.md  gap-media-upload.md  gap-telemetry-logger.md  (+13 more)
include/: ai.h
scripts/: build-book.sh  check-book-highlight.mjs  check-ffi-symbols.sh  check-release-abi.sh  extract-changelog-section.sh  package-release.sh
src/: main.zig
(+230 files in other folders)
